# substrate

./: .gitignore  Cargo.lock:Zone.Identifier  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/account/: Cargo.toml  README.md
pallets/account/src/: lib.rs
pallets/certificate/: Cargo.toml
pallets/certificate/src/: lib.rs
pallets/cv/: Cargo.toml
pallets/cv/src/: lib.rs
pallets/sys-man/: Cargo.toml
pallets/sys-man/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/utils/: Cargo.toml
pallets/utils/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
